--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aeroer - CrossBox Game</title>
-  <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <section id="start-select">
     <div>
      <div>
-      <h3>Go First or Second?</h3>
+      <h3>Go First or Second ?</h3>
       <button id="1st" class="active" onclick="pickTurn(true);" style='font-size: 14px;'>1st</button><button id="2nd" onclick="pickTurn(false);" style='font-size: 14px;'>2nd</button>
       <h3>Choose Your Character</h3>
       <span id="charSymbols"></span>
@@ -27,7 +27,7 @@
         <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1134440/win02.png" id="emoji-img">
        </div>
        <div id="emoji-text">
-        <span id="aiTalk">"Hi, I'm Unbeatable-AI<br>Wanna Play Against Me?"</span>
+        <span id="aiTalk">"Hi, I'm Aeroer-AI<br>Wanna Play Against Me ?"</span>
        </div>
      </div>
    </header>
@@ -95,7 +95,7 @@
    </section>
    
    <footer>
-    <p>💻 Develop By &#169; <a href="#" target="_blank">Aeroer.Live</a></p>
+    <p style="color: aliceblue;">💻 Develop By &#169; <a href="https://aeroer.live/" target="_blank">Aeroer.Live</a></p>
     
    </footer>
 
